RESOLVED FIXED269554
UnifiedPDF: Annotation entry fields are misplaced
https://bugs.webkit.org/show_bug.cgi?id=269554
Summary UnifiedPDF: Annotation entry fields are misplaced
Tim Horton
Reported 2024-02-15 22:35:09 PST
UnifiedPDF: Annotation entry fields are misplaced
Attachments
Tim Horton
Comment 1 2024-02-15 22:36:24 PST
EWS
Comment 2 2024-02-16 00:24:01 PST
Committed 274806@main (eecdb3e9f6ae): <https://commits.webkit.org/274806@main> Reviewed commits have been landed. Closing PR #24588 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-16 00:25:19 PST
Note You need to log in before you can comment on or make changes to this bug.