UnifiedPDF: Annotation entry fields are misplaced https://bugs.webkit.org/show_bug.cgi?id=269554

Reviewed by Sammy Gill.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::pluginBoundsForAnnotation const):
Convert a rectangle using our (newly fixed) rectangle conversion method,
instead of decomposing it into a point and size and transforming them separately.

Canonical link: https://commits.webkit.org/274806@main